GeoZones functionality working with first few zones active only

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -691,12 +691,18 @@
 	"arenella-suggestions-skills": "Skills",
 	"arenella-suggestions-to": "TO",
 	"BELGIUM": "Belgium",
+	"BENELUX": "Benelux",
+	"BRITISH_ISLES": "British Isles",
+	"CENTRAL_EUROPE": "Central Europe",
 	"create-candidate--profile-image": "There was an issue with the profile image",
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
 	"create-candidate-failure": "Unable to add Candidate",
 	"create-candidate-success": "Your details have been successfully uploaded. They will now be reviewed and added to the system",
+	"DACH": "Dach",
 	"DUTCH": "Dutch",
+	"EASTERN_EUROPE": "Eastern Europe",
 	"ENGLISH": "English",
+	"EUROPE": "Europe",
 	"failure": "Failure",
 	"FRENCH": "French",
 	"func-ba": "Business Analyst",
@@ -716,6 +722,7 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Web Developer",
 	"GERMAN": "German",
+	"Hide": "Hide",
 	"info-item-contract-rate": "Contract Rate",
 	"info-item-days-onsite-fully-remote": "Fully Remote",
 	"info-item-title-availability": "Availability",
@@ -734,6 +741,7 @@
 	"info-item-title-rate": "Rate: ",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
+	"IRELAND": "Ireland",
 	"ITALIAN": "Italian",
 	"login-user-invalid-login": "Invalid Login attempt",
 	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
@@ -766,6 +774,8 @@
 	"newsfeed-cv-updated": "Candidate - CV Updated",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Todays Candidates",
+	"NORTH_AMERICA": "North America",
+	"NORTHERN_EUROPE": "Northern Europe",
 	"POLISH": "Polish",
 	"PORTUGUESE": "Portuguese",
 	"rec-prof-country-belgium": "Belgium",
@@ -811,7 +821,9 @@
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
-	"SPANISH": "Suggestions",
+	"Show": "Show",
+	"SOUTHERN_EUROPE": "Southern Europe",
+	"SPANISH": "Spanish",
 	"stat-candidate-availability": "Candidate Availability",
 	"stat-job-board-views": "Job Board Views",
 	"stat-jobboard-views": "Jobboard Views",
@@ -847,5 +859,7 @@
 	"static-lang-french": "French",
 	"success": "Success",
 	"suggestions-lang-na": "NA",
-	"UK": "United Kingdom"
+	"UK": "United Kingdom",
+	"WESTERN_EUROPE": "Western Europe",
+	"WORLD": "World"
 }
