--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -691,12 +691,18 @@
 	"arenella-suggestions-skills": "Compétences",
 	"arenella-suggestions-to": "À",
 	"BELGIUM": "Belgique",
+	"BENELUX": "Benelux",
+	"BRITISH_ISLES": "Îles Britanniques",
+	"CENTRAL_EUROPE": "Europe centrale",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
 	"create-candidate-failure": "Impossible d'ajouter un candidat",
 	"create-candidate-success": "Vos coordonnées ont été téléchargées avec succès. Ils vont maintenant être examinés et ajoutés au système",
+	"DACH": "Dach",
 	"DUTCH": "Néerlandais",
+	"EASTERN_EUROPE": "L'Europe de l'Est",
 	"ENGLISH": "Anglais",
+	"EUROPE": "L'Europe",
 	"failure": "Échec",
 	"FRENCH": "Français",
 	"func-ba": "Analyste d'affaires",
@@ -716,6 +722,7 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Développeur Web",
 	"GERMAN": "Allemand",
+	"Hide": "Cacher",
 	"info-item-contract-rate": "Taux de contrat",
 	"info-item-days-onsite-fully-remote": "Entièrement distant",
 	"info-item-title-availability": "Disponibilité",
@@ -734,6 +741,7 @@
 	"info-item-title-rate": "Tarif: ",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
+	"IRELAND": "Irlande",
 	"ITALIAN": "Italien",
 	"login-user-invalid-login": "Tentative de connexion invalide",
 	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
@@ -766,6 +774,8 @@
 	"newsfeed-cv-updated": "Candidat - CV mis à jour",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidats du jour",
+	"NORTH_AMERICA": "Amérique du Nord",
+	"NORTHERN_EUROPE": "Europe du Nord",
 	"POLISH": "Polonais",
 	"PORTUGUESE": "Portugais",
 	"rec-prof-country-belgium": "Belgique",
@@ -811,6 +821,8 @@
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
+	"Show": "Montre",
+	"SOUTHERN_EUROPE": "Europe du sud",
 	"SPANISH": "Espanol",
 	"stat-candidate-availability": "Disponibilité des candidats",
 	"stat-job-board-views": "Vues du site d'offres d'emploi",
@@ -847,5 +859,7 @@
 	"static-lang-french": "Français",
 	"success": "Succès",
 	"suggestions-lang-na": "NA",
-	"UK": "Royaume-Uni"
+	"UK": "Royaume-Uni",
+	"WESTERN_EUROPE": "Europe de l'Ouest",
+	"WORLD": "Monde"
 }
