--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -691,12 +691,18 @@
 	"arenella-suggestions-skills": "Vaardigheden",
 	"arenella-suggestions-to": "Naar",
 	"BELGIUM": "België",
+	"BENELUX": "Benelux",
+	"BRITISH_ISLES": "Britse eilanden",
+	"CENTRAL_EUROPE": "Centraal Europa",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
 	"create-candidate-failure": "Kan kandidaat niet toevoegen",
 	"create-candidate-success": "Uw gegevens zijn succesvol geüpload. Ze worden nu beoordeeld en aan het systeem toegevoegd",
+	"DACH": "Dach",
 	"DUTCH": "Nederlands",
+	"EASTERN_EUROPE": "Oost-Europa",
 	"ENGLISH": "Engels",
+	"EUROPE": "Europa",
 	"failure": "Fout",
 	"FRENCH": "Frans",
 	"func-ba": "Bedrijfsanalist",
@@ -716,6 +722,7 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Webontwikkelaar",
 	"GERMAN": "Duitse",
+	"Hide": "Verbergen",
 	"info-item-contract-rate": "Contract Tarief",
 	"info-item-days-onsite-fully-remote": "Volledig op afstand",
 	"info-item-title-availability": "Beschikbaarheid",
@@ -734,6 +741,7 @@
 	"info-item-title-rate": "Tarief: ",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
+	"IRELAND": "Ierland",
 	"ITALIAN": "Italiaans",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
 	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
@@ -766,6 +774,8 @@
 	"newsfeed-cv-updated": "Kandidaat - CV bijgewerkt",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
+	"NORTH_AMERICA": "Noord Amerika",
+	"NORTHERN_EUROPE": "Noord-Europa",
 	"POLISH": "Pools",
 	"PORTUGUESE": "Portugees",
 	"rec-prof-country-belgium": "België",
@@ -811,6 +821,8 @@
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
+	"Show": "Laten zien",
+	"SOUTHERN_EUROPE": "Zuid-Europa",
 	"SPANISH": "Spaans",
 	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
 	"stat-job-board-views": "Jobboard weergaven",
@@ -847,5 +859,7 @@
 	"static-lang-french": "Frans",
 	"success": "Succes",
 	"suggestions-lang-na": "NA",
-	"UK": "Verenigd Koninkrijk"
+	"UK": "Verenigd Koninkrijk",
+	"WESTERN_EUROPE": "West-Europa",
+	"WORLD": "Wereld"
 }
