--- a/recruit-gui/src/assets/i18n/xxes.json
+++ b/recruit-gui/src/assets/i18n/xxes.json
@@ -691,12 +691,18 @@
 	"arenella-suggestions-skills": "Habilidades",
 	"arenella-suggestions-to": "A",
 	"BELGIUM": "Bélgica",
+	"BENELUX": "Benelux",
+	"BRITISH_ISLES": "Islas Británicas",
+	"CENTRAL_EUROPE": "Europa Central",
 	"create-candidate--profile-image": "Hubo un problema con la imagen de perfil.",
 	"create-candidate-cv-format": "El CV debe ser Word o PDF y tener menos de 1MB.",
 	"create-candidate-failure": "Incapaz de agregar candidato",
 	"create-candidate-success": "Sus datos se han cargado correctamente. Ahora serán revisados ​​y agregados al sistema.",
+	"DACH": "Dach",
 	"DUTCH": "Holandés",
+	"EASTERN_EUROPE": "Europa del Este",
 	"ENGLISH": "Inglés",
+	"EUROPE": "Europa",
 	"failure": "Falla",
 	"FRENCH": "Francés",
 	"func-ba": "Analista de negocios",
@@ -716,6 +722,7 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Desarrollador web",
 	"GERMAN": "Alemán",
+	"Hide": "Esconder",
 	"info-item-contract-rate": "Tasa de contrato",
 	"info-item-days-onsite-fully-remote": "Totalmente remoto",
 	"info-item-title-availability": "Disponibilidad",
@@ -734,6 +741,7 @@
 	"info-item-title-rate": "Tarifa: ",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Años de experiencia",
+	"IRELAND": "Ireland",
 	"ITALIAN": "Italiano",
 	"login-user-invalid-login": "Intento de inicio de sesión no válido",
 	"login-user-unable-to-send-email": "No se puede enviar el correo electronico. Posiblemente correo electrónico desconocido.",
@@ -766,6 +774,8 @@
 	"newsfeed-cv-updated": "Candidato - CV Actualizado",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidatos de hoy",
+	"NORTH_AMERICA": "Norteamérica",
+	"NORTHERN_EUROPE": "Norte de Europa",
 	"POLISH": "Polaco",
 	"PORTUGUESE": "Portugués",
 	"rec-prof-country-belgium": "Bélgica",
@@ -811,6 +821,8 @@
 	"register-recruiter-success-title": "Éxito",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
+	"Show": "Show",
+	"SOUTHERN_EUROPE": "Europa del sur",
 	"SPANISH": "Español",
 	"stat-candidate-availability": "Disponibilidad de candidatos",
 	"stat-job-board-views": "Vistas de la bolsa de trabajo",
@@ -847,5 +859,7 @@
 	"static-lang-french": "Francés",
 	"success": "Éxito",
 	"suggestions-lang-na": "NA",
-	"UK": "Reino Unido"
+	"UK": "Reino Unido",
+	"WESTERN_EUROPE": "Europa Oriental",
+	"WORLD": "Mundo"
 }
