--- a/recruit-gui/src/assets/i18n/xxit.json
+++ b/recruit-gui/src/assets/i18n/xxit.json
@@ -691,12 +691,18 @@
 	"arenella-suggestions-skills": "Competenze",
 	"arenella-suggestions-to": "A",
 	"BELGIUM": "Belgio",
+	"BENELUX": "Benelux",
+	"BRITISH_ISLES": "Isole Britanniche",
+	"CENTRAL_EUROPE": "Europa centrale",
 	"create-candidate--profile-image": "Si è verificato un problema con l'immagine del profilo",
 	"create-candidate-cv-format": "Il CV deve essere Word o PDF e inferiore a 1 MB",
 	"create-candidate-failure": "Impossibile aggiungere il candidato",
 	"create-candidate-success": "I tuoi dati sono stati caricati con successo. Ora verranno esaminati e aggiunti al sistema",
+	"DACH": "Dach",
 	"DUTCH": "Olandese",
+	"EASTERN_EUROPE": "Europa orientale",
 	"ENGLISH": "Inglese",
+	"EUROPE": "Europa",
 	"failure": "Fallimento",
 	"FRENCH": "Francese",
 	"func-ba": "Analista di affari",
@@ -716,6 +722,7 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Sviluppatore Web",
 	"GERMAN": "Tedesco",
+	"Hide": "Nascondere",
 	"info-item-contract-rate": "Contratto Tariffo",
 	"info-item-days-onsite-fully-remote": "Completamente remoto",
 	"info-item-title-availability": "Disponibilità",
@@ -734,6 +741,7 @@
 	"info-item-title-rate": "Tariffa: ",
 	"info-item-title-to": " al ",
 	"info-item-title-years-experience": "Anni di esperienza",
+	"IRELAND": "Irlanda",
 	"ITALIAN": "Italiano",
 	"login-user-invalid-login": "Tentativo di accesso non valido",
 	"login-user-unable-to-send-email": "Impossibile inviare e-mail. E-mail forse sconosciuta.",
@@ -766,6 +774,8 @@
 	"newsfeed-cv-updated": "Candidato - CV aggiornato",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "I candidati di oggi",
+	"NORTH_AMERICA": "Nord America",
+	"NORTHERN_EUROPE": "Europa settentrionale",
 	"POLISH": "Polacco",
 	"PORTUGUESE": "Portoghese",
 	"rec-prof-country-belgium": "Belgio",
@@ -811,6 +821,8 @@
 	"register-recruiter-success-title": "Successo",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
+	"Show": "Mostrare",
+	"SOUTHERN_EUROPE": "Europa del Sud",
 	"SPANISH": "Spagnolo",
 	"stat-candidate-availability": "Disponibilità del candidato",
 	"stat-job-board-views": "Visualizzazioni della bacheca di lavoro",
@@ -847,5 +859,7 @@
 	"static-lang-french": "Francese",
 	"success": "Successo",
 	"suggestions-lang-na": "NA",
-	"UK": "Regno Unito"
+	"UK": "Regno Unito",
+	"WESTERN_EUROPE": "Europa occidentale",
+	"WORLD": "Mondo"
 }
