untested but finished flags in suggestion profile and supported country slist. Also fix for fetching suggestions race condition issue resolved

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -690,20 +690,30 @@
 	"arenella-suggestions-saved-candidate-btn-back": "Back",
 	"arenella-suggestions-skills": "Skills",
 	"arenella-suggestions-to": "TO",
+	"AUSTRIA": "Austria",
 	"BELGIUM": "Belgium",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "British Isles",
+	"BULGARIA": "Bulgaria",
+	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Central Europe",
 	"create-candidate--profile-image": "There was an issue with the profile image",
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
 	"create-candidate-failure": "Unable to add Candidate",
 	"create-candidate-success": "Your details have been successfully uploaded. They will now be reviewed and added to the system",
+	"CROATIA": "Croatia",
+	"CYPRUS": "Cyprus",
+	"CZECH_REPUBLIC": "Czech Republic",
 	"DACH": "Dach",
+	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
 	"ENGLISH": "English",
+	"ESTONIA": "Estonia",
 	"EUROPE": "Europe",
 	"failure": "Failure",
+	"FINLAND": "Finland",
+	"FRANCE": "France",
 	"FRENCH": "French",
 	"func-ba": "Business Analyst",
 	"func-csharp-dev": "C# Developer",
@@ -722,7 +732,11 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Web Developer",
 	"GERMAN": "German",
+	"GERMANY": "Germany",
+	"GREECE": "Greece",
 	"Hide": "Hide",
+	"HUNGARY": "Hungry",
+	"INDIA": "India",
 	"info-item-contract-rate": "Contract Rate",
 	"info-item-days-onsite-fully-remote": "Fully Remote",
 	"info-item-title-availability": "Availability",
@@ -743,8 +757,14 @@
 	"info-item-title-years-experience": "Years Experience",
 	"IRELAND": "Ireland",
 	"ITALIAN": "Italian",
+	"ITALY": "Italy",
+	"LATVIA": "Latvia",
+	"LIECHTENSTEIN": "Liechtenstein",
+	"LITHUANIA": "Lithuaia",
 	"login-user-invalid-login": "Invalid Login attempt",
 	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
+	"LUXEMBOURG": "Luxembourg",
+	"MALTA": "Malta",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
 	"mp-left-failure-failed-to-persits-new-open-position": "Failed to persist new Open Position",
 	"mp-left-mnu-city": "City",
@@ -758,7 +778,7 @@
 	"mp-left-mnu-renumerationo": "Renumeration",
 	"mp-left-mnu-requested-by": "Requested By",
 	"mp-left-mnu-requested-skills": "Skills",
-	"NETHERLANDS": "The Netherlands",
+	"NETHERLANDS": "Netherlands",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "Unable to add Candidate",
 	"new-candidate-failure-title": "Failure",
@@ -776,7 +796,12 @@
 	"newsfeed-todays-candidates": "Todays Candidates",
 	"NORTH_AMERICA": "North America",
 	"NORTHERN_EUROPE": "Northern Europe",
+	"NORTHERN_IRELAND": "Northern Ireland",
+	"NORWAY": "Norway",
+	"PAKISTAN": "Pakistan",
+	"POLAND": "Poland",
 	"POLISH": "Polish",
+	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
 	"rec-prof-country-belgium": "Belgium",
 	"rec-prof-country-europe": "Europe",
@@ -820,9 +845,13 @@
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
+	"ROMANIA": "Romania",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"Show": "Show",
+	"SLOVAKIA": "Slovakia",
+	"SLOVENIA": "Slovenia",
 	"SOUTHERN_EUROPE": "Southern Europe",
+	"SPAIN": "Spain",
 	"SPANISH": "Spanish",
 	"stat-candidate-availability": "Candidate Availability",
 	"stat-job-board-views": "Job Board Views",
@@ -859,7 +888,12 @@
 	"static-lang-french": "French",
 	"success": "Success",
 	"suggestions-lang-na": "NA",
+	"SWEDEN": "Sweeden",
+	"SWITZERLAND": "Switzerland",
+	"TURKEY": "Turkey",
 	"UK": "United Kingdom",
+	"UKRAINE": "Ucraine",
+	"US": "USA",
 	"WESTERN_EUROPE": "Western Europe",
 	"WORLD": "World"
 }
