--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -690,20 +690,30 @@
 	"arenella-suggestions-saved-candidate-btn-back": "Retour",
 	"arenella-suggestions-skills": "Compétences",
 	"arenella-suggestions-to": "À",
+	"AUSTRIA": "L'Autriche",
 	"BELGIUM": "Belgique",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Îles Britanniques",
+	"BULGARIA": "Bulgarie",
+	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Europe centrale",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
 	"create-candidate-failure": "Impossible d'ajouter un candidat",
 	"create-candidate-success": "Vos coordonnées ont été téléchargées avec succès. Ils vont maintenant être examinés et ajoutés au système",
+	"CROATIA": "Croatie",
+	"CYPRUS": "Chypre",
+	"CZECH_REPUBLIC": "République tchèque",
 	"DACH": "Dach",
+	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
 	"ENGLISH": "Anglais",
+	"ESTONIA": "Estonie",
 	"EUROPE": "L'Europe",
 	"failure": "Échec",
+	"FINLAND": "Finlande",
+	"FRANCE": "France",
 	"FRENCH": "Français",
 	"func-ba": "Analyste d'affaires",
 	"func-csharp-dev": "Développeur C#",
@@ -722,7 +732,11 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Développeur Web",
 	"GERMAN": "Allemand",
+	"GERMANY": "Allemagne",
+	"GREECE": "Grèce",
 	"Hide": "Cacher",
+	"HUNGARY": "Affamé",
+	"INDIA": "Inde",
 	"info-item-contract-rate": "Taux de contrat",
 	"info-item-days-onsite-fully-remote": "Entièrement distant",
 	"info-item-title-availability": "Disponibilité",
@@ -743,8 +757,14 @@
 	"info-item-title-years-experience": "Années d'expérience",
 	"IRELAND": "Irlande",
 	"ITALIAN": "Italien",
+	"ITALY": "Italie",
+	"LATVIA": "Lettonie",
+	"LIECHTENSTEIN": "Liechtenstein",
+	"LITHUANIA": "Lituanie",
 	"login-user-invalid-login": "Tentative de connexion invalide",
 	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
+	"LUXEMBOURG": "Luxembourg",
+	"MALTA": "Malte",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
 	"mp-left-failure-failed-to-persits-new-open-position": "Échec de la persistance de la nouvelle position ouverte",
 	"mp-left-mnu-city": "Ville",
@@ -776,7 +796,12 @@
 	"newsfeed-todays-candidates": "Candidats du jour",
 	"NORTH_AMERICA": "Amérique du Nord",
 	"NORTHERN_EUROPE": "Europe du Nord",
+	"NORTHERN_IRELAND": "Irlande du Nord",
+	"NORWAY": "Norvège",
+	"PAKISTAN": "Pakistan",
+	"POLAND": "Pologne",
 	"POLISH": "Polonais",
+	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
 	"rec-prof-country-belgium": "Belgique",
 	"rec-prof-country-europe": "L'Europe",
@@ -820,9 +845,13 @@
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
+	"ROMANIA": "Roumanie",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"Show": "Montre",
+	"SLOVAKIA": "Slovaquie",
+	"SLOVENIA": "La Slovénie",
 	"SOUTHERN_EUROPE": "Europe du sud",
+	"SPAIN": "Espagne",
 	"SPANISH": "Espanol",
 	"stat-candidate-availability": "Disponibilité des candidats",
 	"stat-job-board-views": "Vues du site d'offres d'emploi",
@@ -859,7 +888,12 @@
 	"static-lang-french": "Français",
 	"success": "Succès",
 	"suggestions-lang-na": "NA",
+	"SWEDEN": "Suède",
+	"SWITZERLAND": "Suisse",
+	"TURKEY": "Dinde",
 	"UK": "Royaume-Uni",
+	"UKRAINE": "Ukraine",
+	"US": "États-Unis",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
 	"WORLD": "Monde"
 }
