--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -690,20 +690,30 @@
 	"arenella-suggestions-saved-candidate-btn-back": "Terug",
 	"arenella-suggestions-skills": "Vaardigheden",
 	"arenella-suggestions-to": "Naar",
+	"AUSTRIA": "Oostenrijk",
 	"BELGIUM": "België",
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britse eilanden",
+	"BULGARIA": "Bulgarije",
+	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Centraal Europa",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
 	"create-candidate-failure": "Kan kandidaat niet toevoegen",
 	"create-candidate-success": "Uw gegevens zijn succesvol geüpload. Ze worden nu beoordeeld en aan het systeem toegevoegd",
+	"CROATIA": "Kroatie",
+	"CYPRUS": "Cyprus",
+	"CZECH_REPUBLIC": "Tsjechische Republiek",
 	"DACH": "Dach",
+	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
 	"ENGLISH": "Engels",
+	"ESTONIA": "Estland",
 	"EUROPE": "Europa",
 	"failure": "Fout",
+	"FINLAND": "Finland",
+	"FRANCE": "Frankrijk",
 	"FRENCH": "Frans",
 	"func-ba": "Bedrijfsanalist",
 	"func-csharp-dev": "C#-ontwikkelaar",
@@ -722,7 +732,11 @@
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Webontwikkelaar",
 	"GERMAN": "Duitse",
+	"GERMANY": "Duitsland",
+	"GREECE": "Griekenland",
 	"Hide": "Verbergen",
+	"HUNGARY": "Hongerig",
+	"INDIA": "Indië",
 	"info-item-contract-rate": "Contract Tarief",
 	"info-item-days-onsite-fully-remote": "Volledig op afstand",
 	"info-item-title-availability": "Beschikbaarheid",
@@ -743,8 +757,14 @@
 	"info-item-title-years-experience": "Jaren ervaring",
 	"IRELAND": "Ierland",
 	"ITALIAN": "Italiaans",
+	"ITALY": "Italie",
+	"LATVIA": "Letland",
+	"LIECHTENSTEIN": "Liechtenstein",
+	"LITHUANIA": "Litouwen",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
 	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
+	"LUXEMBOURG": "Luxemburg",
+	"MALTA": "Malta",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
 	"mp-left-failure-failed-to-persits-new-open-position": "Kan nieuwe open positie niet volhouden",
 	"mp-left-mnu-city": "Stad",
@@ -776,7 +796,12 @@
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
 	"NORTH_AMERICA": "Noord Amerika",
 	"NORTHERN_EUROPE": "Noord-Europa",
+	"NORTHERN_IRELAND": "Noord-Ierland",
+	"NORWAY": "Noorwegen",
+	"PAKISTAN": "Pakistan",
+	"POLAND": "Polen",
 	"POLISH": "Pools",
+	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
 	"rec-prof-country-belgium": "België",
 	"rec-prof-country-europe": "Europa",
@@ -820,9 +845,13 @@
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
+	"ROMANIA": "Roemenië",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"Show": "Laten zien",
+	"SLOVAKIA": "Slowakije",
+	"SLOVENIA": "Slovenië",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
+	"SPAIN": "Spanje",
 	"SPANISH": "Spaans",
 	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
 	"stat-job-board-views": "Jobboard weergaven",
@@ -859,7 +888,12 @@
 	"static-lang-french": "Frans",
 	"success": "Succes",
 	"suggestions-lang-na": "NA",
+	"SWEDEN": "Zweden",
+	"SWITZERLAND": "Zwitserland",
+	"TURKEY": "Kalkoen",
 	"UK": "Verenigd Koninkrijk",
+	"UKRAINE": "Oekraïne",
+	"US": "VS",
 	"WESTERN_EUROPE": "West-Europa",
 	"WORLD": "Wereld"
 }
