Geozones countries, sponsorship and sec level

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -294,7 +294,13 @@
 	"arenella-new-candidate-profile-image": "Profile Image",
 	"arenella-new-candidate-rate": "Rate",
 	"arenella-new-candidate-required-fields": "The following fields are required",
+	"arenella-new-candidate-requires-sponsorship": "Requires Sponsorship",
 	"arenella-new-candidate-role-sought": "Role Sought",
+	"arenella-new-candidate-sc-dv": "DV",
+	"arenella-new-candidate-sc-nato": "NATO",
+	"arenella-new-candidate-sc-none": "NA",
+	"arenella-new-candidate-sc-sc": "SC",
+	"arenella-new-candidate-security-clearance": "Security Clearance",
 	"arenella-new-candidate-skills": "Skills",
 	"arenella-new-candidate-spoken-languages": "Spoken Languages",
 	"arenella-new-candidate-surname": "Surname",
@@ -739,6 +745,8 @@
 	"INDIA": "India",
 	"info-item-contract-rate": "Contract Rate",
 	"info-item-days-onsite-fully-remote": "Fully Remote",
+	"info-item-requires-sponsorship": "Required",
+	"info-item-security-clearance": "Level",
 	"info-item-title-availability": "Availability",
 	"info-item-title-available-from": "Available From",
 	"info-item-title-city": "City",
@@ -753,6 +761,8 @@
 	"info-item-title-perm-rate": "Perm Rate",
 	"info-item-title-permanent": "Perm",
 	"info-item-title-rate": "Rate: ",
+	"info-item-title-requires-sponsorship": "Sponsorship",
+	"info-item-title-security-clearance": "Security Clearance",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
 	"IRELAND": "Ireland",
@@ -794,6 +804,7 @@
 	"newsfeed-cv-updated": "Candidate - CV Updated",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Todays Candidates",
+	"no": "No",
 	"NORTH_AMERICA": "North America",
 	"NORTHERN_EUROPE": "Northern Europe",
 	"NORTHERN_IRELAND": "Northern Ireland",
@@ -895,5 +906,6 @@
 	"UKRAINE": "Ucraine",
 	"US": "USA",
 	"WESTERN_EUROPE": "Western Europe",
-	"WORLD": "World"
+	"WORLD": "World",
+	"yes": "Yes"
 }
