--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -294,7 +294,13 @@
 	"arenella-new-candidate-profile-image": "Image de profil",
 	"arenella-new-candidate-rate": "Tarif",
 	"arenella-new-candidate-required-fields": "Les champs suivants sont obligatoires",
+	"arenella-new-candidate-requires-sponsorship": "Nécessite un parrainage",
 	"arenella-new-candidate-role-sought": "Rôle recherché",
+	"arenella-new-candidate-sc-dv": "DV",
+	"arenella-new-candidate-sc-nato": "NATO",
+	"arenella-new-candidate-sc-none": "NA",
+	"arenella-new-candidate-sc-sc": "SC",
+	"arenella-new-candidate-security-clearance": "Habilitation de sécurité",
 	"arenella-new-candidate-skills": "Compétences",
 	"arenella-new-candidate-spoken-languages": "Langues parlées",
 	"arenella-new-candidate-surname": "Nom de famille",
@@ -739,6 +745,8 @@
 	"INDIA": "Inde",
 	"info-item-contract-rate": "Taux de contrat",
 	"info-item-days-onsite-fully-remote": "Entièrement distant",
+	"info-item-requires-sponsorship": "Requis",
+	"info-item-security-clearance": "Niveau",
 	"info-item-title-availability": "Disponibilité",
 	"info-item-title-available-from": "Disponible",
 	"info-item-title-city": "Ville",
@@ -753,6 +761,8 @@
 	"info-item-title-perm-rate": "Taux de perm",
 	"info-item-title-permanent": "Perm",
 	"info-item-title-rate": "Tarif: ",
+	"info-item-title-requires-sponsorship": "Parrainage",
+	"info-item-title-security-clearance": "Habilitation de sécurité",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
 	"IRELAND": "Irlande",
@@ -794,6 +804,7 @@
 	"newsfeed-cv-updated": "Candidat - CV mis à jour",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "Candidats du jour",
+	"no": "Non",
 	"NORTH_AMERICA": "Amérique du Nord",
 	"NORTHERN_EUROPE": "Europe du Nord",
 	"NORTHERN_IRELAND": "Irlande du Nord",
@@ -895,5 +906,6 @@
 	"UKRAINE": "Ukraine",
 	"US": "États-Unis",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
-	"WORLD": "Monde"
+	"WORLD": "Monde",
+	"yes": "Oui"
 }
