--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -294,7 +294,13 @@
 	"arenella-new-candidate-profile-image": "Profielfoto",
 	"arenella-new-candidate-rate": "Tarief",
 	"arenella-new-candidate-required-fields": "De volgende velden zijn verplicht",
+	"arenella-new-candidate-requires-sponsorship": "Vereist sponsoring",
 	"arenella-new-candidate-role-sought": "Rol gezocht",
+	"arenella-new-candidate-sc-dv": "DV",
+	"arenella-new-candidate-sc-nato": "NATO",
+	"arenella-new-candidate-sc-none": "NA",
+	"arenella-new-candidate-sc-sc": "SC",
+	"arenella-new-candidate-security-clearance": "Veiligheidsmachtiging",
 	"arenella-new-candidate-skills": "Vaardigheden",
 	"arenella-new-candidate-spoken-languages": "Gesproken talen",
 	"arenella-new-candidate-surname": "Achternaam",
@@ -739,6 +745,8 @@
 	"INDIA": "Indië",
 	"info-item-contract-rate": "Contract Tarief",
 	"info-item-days-onsite-fully-remote": "Volledig op afstand",
+	"info-item-requires-sponsorship": "Nodig",
+	"info-item-security-clearance": "Niveau",
 	"info-item-title-availability": "Beschikbaarheid",
 	"info-item-title-available-from": "Beschikbaar",
 	"info-item-title-city": "Stad",
@@ -753,6 +761,8 @@
 	"info-item-title-perm-rate": "Vaste Salaris",
 	"info-item-title-permanent": "Vaste",
 	"info-item-title-rate": "Tarief: ",
+	"info-item-title-requires-sponsorship": "Sponsoring",
+	"info-item-title-security-clearance": "Veiligheidsmachtiging",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
 	"IRELAND": "Ierland",
@@ -794,6 +804,7 @@
 	"newsfeed-cv-updated": "Kandidaat - CV bijgewerkt",
 	"newsfeed-na": "Na",
 	"newsfeed-todays-candidates": "De kandidaten van vandaag",
+	"no": "Nee",
 	"NORTH_AMERICA": "Noord Amerika",
 	"NORTHERN_EUROPE": "Noord-Europa",
 	"NORTHERN_IRELAND": "Noord-Ierland",
@@ -895,5 +906,6 @@
 	"UKRAINE": "Oekraïne",
 	"US": "VS",
 	"WESTERN_EUROPE": "West-Europa",
-	"WORLD": "Wereld"
+	"WORLD": "Wereld",
+	"yes": "Ja"
 }
