listing -> MP box layout fixes

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -379,7 +379,7 @@
 	"arenella-recruiter-listing-add-skill": "Add Skill",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Extract Filters",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Perform Extraction",
-	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Add the role to the Marketplace so other recruiters will be able to contact \n\t\t\tyou with suitable candidates.",
+	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Other recruiters will be able to contact you with suitable candidates.",
 	"arenella-recruiter-listing-box-upld-extract-filters-extract": "Perform Extraction",
 	"arenella-recruiter-listing-box-upld-extract-filters-failure": "Unfortunately it was not possible to extract filters from this file.",
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Upload File",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-location": "Location",
 	"arenella-recruiter-listing-mp": "Marketplace",
 	"arenella-recruiter-listing-mp-add": "Add to Marketplace",
-	"arenella-recruiter-listing-mp-add-text": "Add the role to the Marketplace so other recruiters will be able to contact \n\t\t\tyou with suitable candidates.",
+	"arenella-recruiter-listing-mp-add-text": "Other recruiters will be able to contact you with suitable candidates.",
 	"arenella-recruiter-listing-mp-btn-agree": "Agree",
 	"arenella-recruiter-listing-mp-btn-decline": "Decline",
 	"arenella-recruiter-listing-mp-comments": "Comment's",
