--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -379,7 +379,7 @@
 	"arenella-recruiter-listing-add-skill": "Ajouter une compétence",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Extraire les filtres",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Effectuer l'extraction",
-	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Ajoutez le rôle à la Marketplace pour que d'autres recruteurs puissent le contacter\nvous avec des candidats appropriés.",
+	"arenella-recruiter-listing-box-upld-extract-filters-desc": "D'autres recruteurs pourront vous contacter avec des candidats appropriés.",
 	"arenella-recruiter-listing-box-upld-extract-filters-extract": "Effectuer l'extraction",
 	"arenella-recruiter-listing-box-upld-extract-filters-failure": "Malheureusement, il n'a pas été possible d'extraire les filtres de ce fichier.",
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Téléverser un fichier",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-location": "Emplacement",
 	"arenella-recruiter-listing-mp": "Marché",
 	"arenella-recruiter-listing-mp-add": "Ajouter au marché",
-	"arenella-recruiter-listing-mp-add-text": "Ajoutez le rôle à la Marketplace pour que d'autres recruteurs puissent le contacter\nvous avec des candidats appropriés.",
+	"arenella-recruiter-listing-mp-add-text": "D'autres recruteurs pourront vous contacter avec des candidats appropriés.",
 	"arenella-recruiter-listing-mp-btn-agree": "Accepter",
 	"arenella-recruiter-listing-mp-btn-decline": "Déclin",
 	"arenella-recruiter-listing-mp-comments": "Commentaires",
