--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -379,7 +379,7 @@
 	"arenella-recruiter-listing-add-skill": "Vaardigheid toevoegen",
 	"arenella-recruiter-listing-box-upld-extract-filters": "Filters extraheren",
 	"arenella-recruiter-listing-box-upld-extract-filters-btn-extract": "Voer extractie uit",
-	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Voeg de rol toe aan de Marktplaats, zodat andere recruiters contact kunnen opnemen\nu met geschikte kandidaten.",
+	"arenella-recruiter-listing-box-upld-extract-filters-desc": "Andere recruiters kunnen contact met u opnemen met geschikte kandidaten.",
 	"arenella-recruiter-listing-box-upld-extract-filters-extract": "Voer extractie uit",
 	"arenella-recruiter-listing-box-upld-extract-filters-failure": "Helaas was het niet mogelijk om filters uit dit bestand te extraheren.",
 	"arenella-recruiter-listing-box-upld-extract-filters-file": "Upload bestand",
@@ -416,7 +416,7 @@
 	"arenella-recruiter-listing-location": "Plaats",
 	"arenella-recruiter-listing-mp": "Marktplaats",
 	"arenella-recruiter-listing-mp-add": "Voeg toe aan Marktplaats",
-	"arenella-recruiter-listing-mp-add-text": "Voeg de rol toe aan de Marktplaats, zodat andere recruiters contact kunnen opnemen\nu met geschikte kandidaten.",
+	"arenella-recruiter-listing-mp-add-text": "Andere recruiters kunnen contact met u opnemen met geschikte kandidaten.",
 	"arenella-recruiter-listing-mp-btn-agree": "aanvaarden",
 	"arenella-recruiter-listing-mp-btn-decline": "Afwijzen",
 	"arenella-recruiter-listing-mp-comments": "Commentaar",
