bug fixes and ES config from properties

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -788,6 +788,7 @@
 	"mp-left-mnu-renumerationo": "Renumeration",
 	"mp-left-mnu-requested-by": "Requested By",
 	"mp-left-mnu-requested-skills": "Skills",
+	"mp-left-mnu-start-date": "Start Date",
 	"NETHERLANDS": "Netherlands",
 	"new-candidate-basic": "Basic",
 	"new-candidate-failure": "Unable to add Candidate",
