--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -788,6 +788,7 @@
 	"mp-left-mnu-renumerationo": "Rémunération",
 	"mp-left-mnu-requested-by": "Demandé par",
 	"mp-left-mnu-requested-skills": "Compétences",
+	"mp-left-mnu-start-date": "Date de début",
 	"NETHERLANDS": "Les Pays-Bas",
 	"new-candidate-basic": "Basique",
 	"new-candidate-failure": "Impossible d'ajouter un candidat",
