--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -788,6 +788,7 @@
 	"mp-left-mnu-renumerationo": "Vergoeding",
 	"mp-left-mnu-requested-by": "Aangevraagd door",
 	"mp-left-mnu-requested-skills": "Vaardigheden",
+	"mp-left-mnu-start-date": "Startdatum",
 	"NETHERLANDS": "Nederland",
 	"new-candidate-basic": "Basis",
 	"new-candidate-failure": "Kan kandidaat niet toevoegen",
